--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,12 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+/.idea/vcs.xml
+/.idea/runConfigurations.xml
+/.idea/modules.xml
+/.idea/misc.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/copyright/profiles_settings.xml
+/.idea/compiler.xml
+/.idea/codeStyles/Project.xml
+/.idea/codeStyles/codeStyleConfig.xml
